subprojects/swen430/src/test/resources/tests/valid/StringAssign_Valid_10.while
void main() {
    {string f} foo = {f: "hello"};
    foo.f[0] = 'z';
    print foo;
}

