subprojects/swen430/src/test/resources/tests/invalid/Break_Invalid_1.while
string foo() {
    break;
    return "hello";
}

void main() {
    print foo();
}

